--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-
+GOOGLE_ID=115777665221-1h5te7oc5a2bsji67uro6brohe9n8dmt.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb://0.0.0.0:27017/
 
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = ulVug4r4uGmfLIsEUkYY3nQ2lXZQaBzmhy3rAS98gB8=
