--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GOOGLE_ID=115777665221-1h5te7oc5a2bsji67uro6brohe9n8dmt.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb://0.0.0.0:27017/
+MONGODB_URI=mongodb+srv://dhruv123:dhruv123@cluster0.0zop9bf.mongodb.net/
 
 NEXTAUTH_URL = http://localhost:3000
 NEXTAUTH_URL_INTERNAL = http://localhost:3000
